*SVN*

* Fix that casting change in 0.7.0 would convert nil values to the default value for the type instead of leaving it as nil


*0.7.1* (20th April, 2005)

* Depend on Active Record 1.10.1 and Action Pack 1.8.1


*0.7.0* (19th April, 2005)

* When casting structured types, don't try to send obj.name= unless obj responds to it, causes casting to be less likely to fail for XML-RPC

* Add scaffolding via ActionController::Base.web_service_scaffold for quick testing using a web browser

* ActionWebService::API::Base#api_methods now returns a hash containing ActionWebService::API::Method objects instead of hashes. However, ActionWebService::API::Method defines a #[]() backwards compatibility method so any existing code utilizing this will still work.

* The :layered dispatching mode can now be used with SOAP as well, allowing you to support SOAP and XML-RPC clients for APIs like the metaWeblog API

* Remove ActiveRecordSoapMarshallable workaround, see #912 for details

* Generalize casting code to be used by both SOAP and XML-RPC (previously, it was only XML-RPC)

* Ensure return value is properly cast as well, fixes XML-RPC interoperability with Ecto and possibly other clients

* Include backtraces in 500 error responses for failed request parsing, and remove "rescue nil" statements obscuring real errors for XML-RPC

* Perform casting of struct members even if the structure is already of the correct type, so that the type we specify for the struct member is always the type of the value seen by the API implementation


*0.6.2* (27th March, 2005)

* Allow method declarations for direct dispatching to declare parameters as well. We treat an arity of < 0 or > 0 as an indication that we should send through parameters. Closes #939.


*0.6.1* (22th March, 2005)

* Fix that method response QNames mismatched with that declared in the WSDL, makes SOAP::WSDLDriverFactory work against AWS again

* Fix that @request.env was being modified, instead, dup the value gotten from env